--- a/templates/kiwi/selector.html
+++ b/templates/kiwi/selector.html
@@ -21,11 +21,101 @@
     <![endif]-->
       <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="coohqjii958p7p4"></script>
 
+
+      <script type="text/javascript">
+
+
+      // The API developer key obtained from the Google Cloud Console.
+      var developerKey = 'AIzaSyCl62qhKjnhpf2tEFEr94S8-ackQsMxiq0';
+
+      // The Client ID obtained from the Google Cloud Console.
+      var clientId = '263593193734-9vp3qpd2o3ne178r7hv6g5lmfqnmred4.apps.googleusercontent.com';
+
+      // Scope to use to access user's photos.
+      var scope = ['https://www.googleapis.com/auth/drive.readonly'];
+
+      var pickerApiLoaded;
+      var pickerCreated = false;
+      var authorized = false;
+      var picker;
+      var oauthToken;
+
+      // Use the API Loader script to load google.picker and gapi.auth.
+      function onApiLoad() {
+          pickerApiLoaded = false;
+        gapi.load('auth', {'callback': onAuthApiLoad});
+        gapi.load('picker', {'callback': onPickerApiLoad});
+      }
+
+      function onAuthApiLoad() {
+          if (!authorized)
+                window.gapi.auth.authorize(
+                    {
+                      'client_id': clientId,
+                      'scope': scope,
+                      'immediate': false
+                    },
+                    handleAuthResult);
+      }
+
+      function onPickerApiLoad() {
+        pickerApiLoaded = true;
+          if (!pickerCreated)
+            createPicker();
+          else
+            picker.setVisible(true);
+      }
+
+      function handleAuthResult(authResult) {
+        if (authResult && !authResult.error) {
+          oauthToken = authResult.access_token;
+          authorized = true;
+          if (!pickerCreated)
+            createPicker();
+          else
+            picker.setVisible(true);
+        }
+      }
+
+      // Create and render a Picker object
+      function createPicker() {
+        if (pickerApiLoaded && oauthToken) {
+              picker = new google.picker.PickerBuilder().
+              addView(google.picker.ViewId.DOCS).
+              enableFeature(google.picker.Feature.MULTISELECT_ENABLED).
+              setOAuthToken(oauthToken).
+              setDeveloperKey(developerKey).
+              setCallback(pickerCallback).
+              build();
+          pickerCreated = true;
+          picker.setVisible(true);
+        }
+      }
+
+
+      function pickerCallback(data) {
+        if (data[google.picker.Response.ACTION] == google.picker.Action.PICKED) {
+            var jsonString = JSON.stringify(data[google.picker.Response.DOCUMENTS]);
+          $.ajax({
+            url: "googleDrive/save",
+            data: {'source':'googleDrive', 'files':jsonString},
+            type: "POST"
+
+        }).done(function(){
+            location.reload();
+        });
+
+        }
+
+      }
+    </script>
+    <!-- The Google API Loader script. -->
+    <script type="text/javascript" src="https://apis.google.com/js/api.js"></script>
     </head>
   <body>
-  
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
+  <!--
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -49,10 +139,12 @@
             <button type="submit" class="btn btn-success">Sign in</button>
             <button type="submit" class="btn btn-success">Logout</button>
           </form>
-        </div><!--/.navbar-collapse -->
+        </div>
       </div>
     </div>
-    <div id="container" style="margin-top: 100px">
+    -->
+    <div id="container" style="margin-top: 150px; margin-left: 30px">
+        <button id="GooglePicker" onclick="onApiLoad()">Choose from GoogleDrive</button>
         <!--form action="/selector/google/">
             <button class="btn btn-lg btn-primary btn-block" type="submit">Google</button>
         </form>
@@ -60,13 +152,17 @@
             <button class="btn btn-lg btn-primary btn-block" type="submit">Dropbox</button>
         </form-->
     </div>
-<table id="showlist">
-    <tr>
-        <td>Type</td>
-        <td>Name</td>
-        <td>Size</td>
-    </tr>
-</table>
+
+    <table id="showlist" style="margin-left: 30px">
+        <tr>
+            <td>From</td>
+            <td>Type</td>
+            <td>Name</td>
+            <td>Size</td>
+            <td>Last Modified Time</td>
+        </tr>
+    </table>
+
   </body>
 </html>
 
@@ -80,7 +176,7 @@
         var jsonString = JSON.stringify(files);
         $.ajax({
             url: "dropbox/save",
-            data: {'files':jsonString},
+            data: {'source':'dropbox', 'files':jsonString},
             type: "POST"
 
         }).done(function(){
@@ -119,13 +215,17 @@
             var table = document.getElementById("showlist");
         for(var i=0; i<files.length; i++){
             var row = table.insertRow(1);
-            var cell1 = row.insertCell(0);
-            var cell2 = row.insertCell(1);
-            var cell3 = row.insertCell(2);
+            var cell0 = row.insertCell(0);
+            var cell1 = row.insertCell(1);
+            var cell2 = row.insertCell(2);
+            var cell3 = row.insertCell(3);
+            var cell4 = row.insertCell(4);
            // var img = document.createElement('img');
-            cell1.innerHTML="<img src="+ files[i].fields.icon+">";
+            cell0.innerHTML=files[i].fields.source;
+            cell1.innerHTML="<img src="+ files[i].fields.icon+" height='16' width='16'>";
             cell2.innerHTML="<a href="+files[i].fields.link+" target='_blank'>"+files[i].fields.name+"</a>";
             cell3.innerHTML=files[i].fields.size;
+            cell4.innerHTML=files[i].fields.lastEditTime;
         }
         });
         });
