--- a/templates/acorn/login.html
+++ b/templates/acorn/login.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
-{% load url from future %}
+{% load socialaccount %}
+
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -50,9 +51,10 @@
           </div>
         {% endif %}
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <a href="{% url 'social:begin' 'google-oauth2' %}">Google OAuth2</a><br />
-        <a href="{% url 'social:begin' 'username' %}">Username Auth</a>
+        <a href="{% provider_login_url "google" %}">Google</a>
+
       </form>
+
 
 
     </div> <!-- /container -->
