--- a/templates/dome/index.html
+++ b/templates/dome/index.html
@@ -88,7 +88,7 @@
       </a>
 
       <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="/auth/logout/">Skymesh</a>
+      <a class="brand" href="/accounts/logout/">Skymesh</a>
 
       <!-- Everything you want hidden at 940px or less, place within here -->
       <div class="nav-collapse collapse">
