--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -2,6 +2,8 @@
 
 {% load i18n %}
 {% load account %}
+{% load socialaccount %}
+
 {% load url from future %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
@@ -17,7 +19,7 @@
         {% if next %}
         <input type="hidden" name="next" value="{{ next }}" />
         {% endif %}
-        <a href="/accounts/google/login/"><div class="google">Login with Google</div></a>
+        <a href="{% provider_login_url "google" %}"><div class="google">Login with Google</div></a>
         {% include "socialaccount/snippets/login_extra.html" %}
         <p>Or sign in directly</p>
         <input id="id_login" type="text" class="form-control" placeholder="Username or Email address"
