--- a/templates/dome/selector.html
+++ b/templates/dome/selector.html
@@ -1,4 +1,8 @@
 {% load staticfiles %}
+{% load account %}
+
+{% user_display user as user_display %}
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -113,7 +117,7 @@
     <script type="text/javascript" src="https://apis.google.com/js/api.js"></script>
     </head>
   <body>
-  <!--
+
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
         <div class="navbar-header">
@@ -124,7 +128,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">Skymesh</a>
-          <a class="navbar-brand" href="#">Hi, User Name!</a>
+          <a class="navbar-brand" href="#">Hi, {{ user_display }}!</a>
 		  <button type="submit" class="btn btn-success">Add A Cloud</button>
 
         </div>
@@ -137,12 +141,12 @@
               <input type="password" placeholder="Password" class="form-control">
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
-            <button type="submit" class="btn btn-success">Logout</button>
+            <a href="/accounts/logout/" class="btn btn-success">Logout</a>
           </form>
         </div>
       </div>
     </div>
-    -->
+
     <div id="container" style="margin-top: 150px; margin-left: 30px">
         <button id="GooglePicker" onclick="onApiLoad()">Choose from GoogleDrive</button>
         <!--form action="/selector/google/">
