--- a/templates/dome/selector.html
+++ b/templates/dome/selector.html
@@ -44,6 +44,10 @@
       var picker;
       var oauthToken;
 
+      //test
+      //oauthToken = "ya29.1.AADtN_Xwblmng1vSFppDLBYvA262cNBXsHPnAsIU2pegCYkodOqwIHWeGBTQs6MtFPKjy-M";
+      //authorized = true;
+
       // Use the API Loader script to load google.picker and gapi.auth.
       function onApiLoad() {
           pickerApiLoaded = false;
