--- a/templates/dome/selector.html
+++ b/templates/dome/selector.html
@@ -119,7 +119,7 @@
     </head>
   <body>
 
-    <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+    <div class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -132,18 +132,34 @@
           {% if user.is_authenticated %}
           <a class="navbar-brand" href="#">Hi, {{ user.id }}!</a>
           {% endif %}
-		  <button type="submit" class="btn btn-success">Add A Cloud</button>
+{#		      <button type="submit" class="btn btn-success">#}
+{#            <a href="{% provider_login_url "google" %}">Add Google Account</a>#}
+{#          </button>#}
+
+
 
         </div>
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
+{#            <div class="form-group">#}
+{#              <input type="text" placeholder="Email" class="form-control">#}
+{#            </div>#}
+{#            <div class="form-group">#}
+{#              <input type="password" placeholder="Password" class="form-control">#}
+{#            </div>#}
+{#            <button type="submit" class="btn btn-success">Sign in</button>#}
+            <div class="btn-group">
+              <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
+                + Link Account <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                <li role="presentation" class="dropdown-header">Supported Clouds</li>
+                <li role="presentation"><a role="menuitem" tabindex="-1"
+                                           href="{% provider_login_url "google" process="connect" %}">Google Drive</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1"
+                                           href="{% provider_login_url "dropbox" process="connect" %}">Dropbox</a></li>
+              </ul>
             </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
             <a href="/accounts/logout/" class="btn btn-success">Logout</a>
           </form>
         </div>
